# crafts

./: .lintstagedrc.json  Cargo.toml  Makefile  README.md  biome.json  go.work  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
.codex/: config.toml
.opencode/: opencode.jsonc
.zed/: settings.json
docs/agentic-api/skills/: SKILL.md
docs/agentic-app/: README.md
docs/agentic-app/skills/: SKILL.md
docs/agentic-ui/skills/: SKILL.md
docs/axum-authentication/: README.md
docs/axum-authentication/skills/: SKILL.md
docs/go-resumable-uploads/: README.md
docs/go-resumable-uploads/skills/: SKILL.md
docs/react-feature-pattern/: README.md
docs/react-feature-pattern/skills/: SKILL.md
examples/docs/: README.md  ROADMAP.md
examples/express-api/: package.json  tsconfig.json
examples/nodejs/: .env.example  package.json
examples/react-app/: package.json
judges/two-sum/: go.mod
playgrounds/agent-cli/: package.json
playgrounds/agentic-api/: .env.example  package.json
playgrounds/agentic-app/: README.md  index.html  package.json  vite.config.ts
playgrounds/agentic-ui/: package.json  tsconfig.node.json
playgrounds/axum_authentication/: Cargo.toml
playgrounds/go-resumable-uploads/: go.mod
playgrounds/gpui_crud/: Cargo.toml
playgrounds/gpui_crud/src/: main.rs
playgrounds/motion-dev/: index.html  package.json  tsconfig.app.json
playgrounds/react-feature-pattern/: README.md  index.html  package.json  tsconfig.app.json
playgrounds/vibe-coding-ui/: README.md  index.html  package.json
syntax/goroutines/: go.mod
(+34 files in other folders)
